--- a/style.css
+++ b/style.css
@@ -3,13 +3,26 @@ body {
   margin: 64px 88px 80px 88px;
   padding-bottom: 30px;
   box-sizing: border-box;
-  /* background-image: url("clarke4.jpg");
-  background-size: cover; */
+
   background-color: #ffffe7; /*#ffffe7 EBF0F6 f5f1da  22272  134510  39112*/
 }
 
+
 h1 {
   text-align: center;
+}
+
+.picture {
+  text-align: right;
+}
+
+p.slogan {
+  padding-left: 140px;
+  text-align: center;
+  font: initial;
+  color:navy;
+  font-weight: bolder;
+
 }
 
 h2 {
