--- a/style.css
+++ b/style.css
@@ -3,26 +3,11 @@ body {
   margin: 64px 88px 80px 88px;
   padding-bottom: 30px;
   box-sizing: border-box;
-
   background-color: #ffffe7; /*#ffffe7 EBF0F6 f5f1da  22272  134510  39112*/
 }
 
-
 h1 {
   text-align: center;
-}
-
-.picture {
-  text-align: right;
-}
-
-p.slogan {
-  padding-left: 140px;
-  text-align: center;
-  font: initial;
-  color:navy;
-  font-weight: bolder;
-
 }
 
 h2 {
@@ -49,6 +34,12 @@ p {
   padding: 0 0 16px 0;
 }
 
+img {
+  float: bottom;
+  max-width: 50%
+  max-height: auto;
+}
+
 .title {
   font-weight: bold;
   display: inline;
@@ -64,6 +55,14 @@ p {
   padding: 0;
   font-variant: small-caps;
 }
+
+.picture{
+text-align: center;
+/*display: block;
+margin-left:auto;
+margin-right: auto;
+width: 50%;
+*/}
 
 .left{
   float: left;
@@ -108,3 +107,8 @@ p {
 .position {
   padding-left: 30px;
 }
+
+.teammembers{
+  display:inline;
+}
+
