--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
 body {
 
-  font-family: Optima, helvetica, sans-serif;
+  font-family: "Raleway", "Quicksand", helvetica, sans-serif;
   margin: 64px 88px 80px 88px;
   padding-bottom: 30px;
   box-sizing: border-box;
   background-color: #ffffe7; /*#ffffe7 EBF0F6 f5f1da  22272  134510  39112*/
 
 }
-
 
 h1 {
   text-align: center;
@@ -86,8 +85,6 @@ margin: 100px;
   padding: 0 30px 0 50px;
   margin: 0;
 }
-
-
 
 .right{
   float: right;
