--- a/style.css
+++ b/style.css
@@ -4,14 +4,15 @@ body {
   margin: 64px 88px 80px 88px;
   padding-bottom: 30px;
   box-sizing: border-box;
-  background-color: #ffffe7; /*#ffffe7 EBF0F6 f5f1da  22272  134510  39112*/
-
+  background-color: #fcfdfd;  /* #fcfdfd #f1f3f8 #ffffe7 EBF0F6 f5f1da  22272  134510  39112*/
 }
-
 
 h1 {
   text-align: center;
+}
 
+li.page {
+  margin: 8px;
 }
 
 .picture {
@@ -22,9 +23,8 @@ p.slogan {
   padding-left: 140px;
   text-align: center;
   font: initial;
-  color:navy;
+  color:#0f3057;
   font-weight: bolder;
-
 }
 
 h2 {
@@ -87,8 +87,6 @@ margin: 100px;
   margin: 0;
 }
 
-
-
 .right{
   float: right;
   margin: 0;
@@ -120,7 +118,17 @@ margin: 100px;
   padding-left: 30px;
 }
 
-.pictures{
-  display: inline-block;
-  margin: 25px;
+a:link {
+  color: #8d93ab;
+  text-decoration: none;
+}
+
+a:visited {
+  color: #8d93ab;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #0f3057;
+  text-decoration: none;
 }
