--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
 
   font-family: "Raleway", "Quicksand", helvetica, sans-serif;
+  font-size: 20px;
   margin: 64px 88px 80px 88px;
   padding-bottom: 30px;
   box-sizing: border-box;
