--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ h2 {
   text-decoration: underline;
   font-weight: bold;
   margin: 0;
+  padding-top: 40px;
 }
 
 h3 {
@@ -49,7 +50,6 @@ ul {
 p {
   width: calc(100% - 250px);
   margin: 0;
-  padding: 0 0 16px 0;
 }
 .team {
   text-align: center
@@ -93,9 +93,9 @@ margin: 100px;
   margin: 0;
 }
 
-.row {
-  padding: 0 0 16px 0;
-}
+/* .row {
+  padding: 0 0 32px 0;
+} */
 
 .row:after{
   content: "";
@@ -114,6 +114,10 @@ margin: 100px;
   list-style-type: disc;
   margin-left: 50px;
 }
+
+/* .objective {
+  padding: 0 0 32px 0;
+} */
 
 .position {
   padding-left: 30px;
