--- a/style.css
+++ b/style.css
@@ -133,6 +133,16 @@ margin: 100px;
   margin: 25px;
 }
 
+.bottomind{
+  padding: 0 0 32px 0;
+}
+
+.bottomind:after{
+  content: "";
+  display: block;
+  clear: both;
+}
+
 a:link {
   color: #8d93ab;
   text-decoration: none;
