--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
 
   font-family: "Raleway", "Quicksand", helvetica, sans-serif;
   font-size: 20px;
-  margin: 64px 88px 80px 88px;
+  margin: 30px 88px 80px 88px;
   padding-bottom: 30px;
   box-sizing: border-box;
   background-color: #fcfdfd;  /* #fcfdfd #f1f3f8 #ffffe7 EBF0F6 f5f1da  22272  134510  39112*/
@@ -17,7 +17,12 @@ li.page {
 }
 
 .picture {
-  text-align: left;
+  text-align: right;
+}
+
+img {
+  border-radius: 10%;
+  border: 4px solid #d6e0f0;
 }
 
 p.slogan {
@@ -51,10 +56,6 @@ p {
   width: calc(100% - 250px);
   margin: 0;
 }
-.vcard {
-  float: left;
-  text-align: left;
-}
 .team {
   text-align: center
 }
@@ -77,7 +78,7 @@ margin: 100px;
   text-align: center;
   margin: 0 0 16px 0;
   padding: 0;
-  display: inline-block;
+  font-variant: small-caps;
 }
 
 .left{
@@ -130,6 +131,16 @@ margin: 100px;
 .pictures{
   display: inline-block;
   margin: 25px;
+}
+
+.bottomind{
+  padding: 0 0 32px 0;
+}
+
+.bottomind:after{
+  content: "";
+  display: block;
+  clear: both;
 }
 
 a:link {
